k8s-waitingroom/waitingroom-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: waitingroom
  namespace: waitingroom
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: waitingroom
  template:
    metadata:
      labels:
        app: waitingroom
    spec:
      nodeSelector:
        kubernetes.io/hostname: rasppi516
      containers:
        - name: nginx
          image: nginx:1.29.5
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: waitingroom-data
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

      volumes:
        - name: waitingroom-data
          hostPath:
            path: /opt/waitingroom/html
            type: DirectoryOrCreate

  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 1m }
        - setWeight: 100
