k8s-waitingroom/waitingroom-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: waitingroom
  namespace: waitingroom
spec:
  type: LoadBalancer
  selector:
    app: waitingroom
  ports:
    - port: 80
      targetPort: 80
