k8s-waitingroom/waitingroom-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: waitingroom-vs
  namespace: waitingroom
  annotations:
    external-dns.alpha.kubernetes.io/hostname: waitingroom.kdvops.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hosts:
  - "waitingroom.kdvops.com"
  gateways:
  - istio-system/kdvops-gateway
  http:
  - route:
    - destination:
        host: waitingroom
        port:
          number: 80
